<resources>
    <string name="app_name">Genopo</string>

    <!--Strings used in standalone-->"
    <string name="btn_use_gui_mode">Use GUI Mode</string>
    <string name="btn_use_terminal_mode">Use Terminal Mode</string>
    <string name="btn_load_prev_config">Load Previous Pipeline</string>

    <!--Strings used in minIT feature-->
    <string name="hint_server_connect">Enter server address</string>
    <string name="btn_request_job">Request Job</string>
    <string name="btn_process_job">Process Job</string>
    <string name="btn_request_another_job">Request Another Job</string>
    <string name="btn_go_to_start_screen">Go to start screen</string>

    <!--Strings used in Demo-->
    <string name="pipeline_description">This will run all the 5 pipeline steps on Ecoli dataset(10MB)\n\nYou can find all the files downloaded, created and the logcat in the <b>mobile-genomics</b> folder in your main storage</string>

    <string name="app_info">Genopo a.k.a. F5N is a Mobile application for Reference Guided Sequence Alignment using Oxford Nanopore Technology Data.\n\nPlease read the following terms before you use this application.\n\n
    - This app needs storage permission inorder to read/write files generated from the pipeline steps\n
    - Grant System Settings Write permission to dim the display to save power when running a pipeline. Check help for more information\n
    - This app needs at least 2GB free RAM to smoothly function\n
    - If you have less memory available, minimizing the app while running some process, may stop the process and generate incomplete results</string>

    <!-- Strings used in PreferenceUtils -->
    <string name="sdcard_uri">SD_CARD_TREE_URI</string>
    <string name="id_step_list">STEP_LIST</string>
    <string name="id_folder_path">FOLDER_PATH</string>
    <string name="id_app_mode">APP_MODE</string>
    <string name="id_wrapper_obj">WRAPPER_OBJ</string>
    <string name="id_results_summary">RESULTS_SUMMARY</string>
    <string name="id_screen_brightness">SCREEN_BRIGHTNESS</string>
    <string name="id_dim_screen">DIM_SCREEN</string>
    <string name="id_prev_conn_log">PREV_CONN_LOG</string>
    <string name="id_compressed_file">COMPRESSED_FILE</string>
    <string name="id_server_ip">SERVER_IP</string>

    <string name="title_choose_any_file">Choose files</string>

    <!-- Strings used in Preference Screen -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_default_storage">Default Storage Path\n<font color="#5F5F5F" size="14">Default download and file extraction location\n</font></string>
    <string name="key_storage_preference">key_storage_preference</string>
    <string name="key_reference_gnome">key_reference_gnome</string>

    <string name="title_reference_gnome">Reference Genome Storage Path\n<font color="#5F5F5F" size="14">X.fa and X.idx files should be stored in this directory to automatically generate pipeline commands in CONNECT TO MINIT mode\n</font></string>
    <string name="key_time_preference">key_time_preference</string>
    <string name="title_time_preference">Time interval between jobs\n<font color="#5F5F5F" size="14">Set the time interval to wait between consecutive jobs on MinIt Burst mode\n</font></string>

    <string name="key_pipeline_type_preference">key_pipeline_type_preference</string>
    <string name="key_pipeline_type_temp_preference">key_pipeline_type_temp_preference</string>

    <string name="pref_header_about">About</string>
    <string name="key_version_preference">key_version_preference</string>
    <string name="summary_about">Genopo a.k.a. F5N is a Mobile application for Reference Guided Sequence Alignment and Analysis using Nanopore Data. You can find out more from https://github.com/SanojPunchihewa/f5n</string>
    <string name="title_version">Version</string>
    <string name="key_feedback_preference">key_feedback_preference</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="summary_feedback">Got any queries? We are happy to help!</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://github.com/SanojPunchihewa/f5n/blob/master/docs/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://github.com/SanojPunchihewa/f5n/blob/master/LICENSE</string>
    <string name="key_storage_permission">key_storage_permission</string>
    <string name="key_sdcard_storage_permission">key_sdcard_storage_permission</string>
    <string name="key_write_settings_permission">key_write_settings_permission</string>
    <string name="key_pipeline_type">key_pipeline_type</string>
    <string name="title_reduce_brightness">Reduce Brightness during Pipeline Execution</string>
    <string name="title_sdcard_write">Download / Extract to SD Card</string>
    <string name="summary_sdcard_write">Choose SD Card from here</string>
    <string name="title_storage_write">Storage Permission</string>
    <string name="key_min_it_upload_files">key_min_it_upload_files</string>
    <string name="title_Select_files_upload">Select files to upload</string>
    <string name="dialog_title_min_it_upload_files">Select output files</string>
    <string name="key_log_file_preference">key_log_file_preference</string>
    <string name="title_log_file">Log file directory\n<font color="#5F5F5F" size="14">Location to save f5n.log and f5n.tmp files\n</font></string>
    <string name="summery_select_upload_files">Select files that should be uploaded to F5N Server(default output file names are used)</string>
    <string name="radio_btn_automate">Automated</string>
    <string name="radio_btn_manual">Manual</string>
    <string name="hint_radio_btn_manual">(Try manual mode for better support, when on low memory)</string>
    <string name="radio_btn_burst_consecutive_jobs">Burst</string>
    <string-array name="min_it_upload_files">
        <item>minimap.sam</item>
        <item>samtool.bam</item>
        <item>reads.fasta.index.readdb</item>
        <item>reads.fasta.index.gzi</item>
        <item>reads.fasta.index.fai</item>
        <item>reads.fasta.index</item>
        <item>reads.fastq.index.readdb</item>
        <item>reads.fastq.index.gzi</item>
        <item>reads.fastq.index.fai</item>
        <item>reads.fastq.index</item>
        <item>meth.tsv</item>
        <item>event-align.txt</item>
        <item>freq.tsv</item>
    </string-array>
    <string name="summary_reduce_brightness">Brightness will reduce once the pipeline starts. <b>Do not</b> minimize, rotate or turn off the display, process may crash</string>
    <string name="title_default_pipeline_type">Pipeline Type</string>
    <string name="btn_methylation">Methylation Calling\n<font color="#5F5F5F" size="12">(Minimap2, Samtools, F5C)</font></string>
    <string name="btn_variant">Variant Calling\n<font color="#5F5F5F" size="12">(Minimap2, Samtools, Nanopolish)</font></string>
    <string name="btn_artic">Artic_C Pipeline\n<font color="#5F5F5F" size="12">(nCoV-2019 novel coronavirus bioinformatics protocol)</font></string>
    <string name="btn_consensus">Consensus Generation\n<font color="#5F5F5F" size="12">(bcftools)</font></string>

    <string name="btn_single_tool">Run a Single Tool\n<font color="#5F5F5F" size="12">(Artic_C, Bcftools, Bioawk)</font></string>
    <string name="txt_how_to_run_subtool">To run an individual analysis tool, select a pipeline that has the particular tool. <b>GUI Mode</b> is provided only for a limited number of sub-tools. Use <b>Terminal Mode</b> to run any sub-tool of an analysis tool</string>
</resources>
