<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:id="@+id/tr_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/input_server_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/hint_server_connect"
            android:inputType="text"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btn_request_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_request_job" />
    </TableRow>

    <TableRow
        android:id="@+id/tr_copy_paste_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_below="@id/tr_send_message">

        <Button
            android:id="@+id/btn_copy_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Copy IP"
            android:onClick="copyIPAddress" />

        <Button
            android:id="@+id/btn_paste_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Paste IP"
            android:onClick="pasteIPAddress" />
    </TableRow>

    <RelativeLayout
        android:id="@+id/tr_radio_grp_execute_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tr_copy_paste_ip"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_grp_execute_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_automate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_automate"
                android:checked="true"
                android:onClick="onSelectExecuteMode"/>

            <RadioButton
                android:id="@+id/radio_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_manual"
                android:onClick="onSelectExecuteMode"/>

            <RadioButton
                android:id="@+id/radio_burst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_burst_consecutive_jobs"
                android:onClick="onSelectExecuteMode"/>
        </RadioGroup>

        <TextView
            android:id="@+id/tv_radio_btn_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_radio_btn_manual"
            android:textColor="@color/gray"
            android:layout_below="@id/radio_grp_execute_mode"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>


    <TableRow
        android:id="@+id/tr_select_files_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_below="@id/tr_radio_grp_execute_mode"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_send_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Upload Files" />
    </TableRow>

    <TableRow
        android:id="@+id/tr_back_to_req_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_below="@id/tr_select_files_send"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_back_to_req_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_request_another_job" />

    </TableRow>

    <TableRow
        android:id="@+id/tr_go_to_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_below="@id/tr_back_to_req_job"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_go_to_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_go_to_start_screen" />

    </TableRow>

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tr_go_to_start"
        android:layout_marginStart="10dp" />

    <ProgressBar
        android:id="@+id/progress_upload_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progressTint="@android:color/black"
        android:layout_below="@id/txt_status"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/progress_upload_status"
        android:layout_above="@id/btn_process_job"
        android:layout_margin="10dp"
        android:id="@+id/scroll_view">

        <TextView
            android:id="@+id/text_conn_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/txt_uder_dev"
        android:text="This option is under development"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_process_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txt_uder_dev"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:text="@string/btn_process_job" />
</RelativeLayout>